--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,42 +3,53 @@
 {% block title %}Home - Strum & Strings{% endblock %}
 
 {% block content %}
-<div class="text-center">
-    <h1>Welcome to Strum & Strings</h1>
-    <p>Explore our wide range of guitars, accessories, and more!</p>
-    <a href="#" class="btn btn-primary btn-lg mt-3">Shop Now</a>
-</div>
+<div class="container mt-5">
+    <!-- Hero Section -->
+    <section class="hero text-center mb-5">
+        <h1 class="display-4">Welcome to Strum & Strings</h1>
+        <p class="lead">Explore our wide range of guitars, accessories, and more!</p>
+        <a href="#" class="btn btn-primary btn-lg mt-3">Shop Now</a>
+    </section>
 
-<div class="row mt-5">
-    <div class="col-md-4">
-        <div class="card">
-            <img src="#" class="card-img-top" alt="Acoustic Guitars">
-            <div class="card-body">
-                <h5 class="card-title">Acoustic Guitars</h5>
-                <p class="card-text">Browse our collection of premium acoustic guitars.</p>
-                <a href="#" class="btn btn-outline-primary">Shop Acoustic</a>
+    <!-- Product Categories Section -->
+    <section class="product-categories">
+        <div class="row g-4">
+            <!-- Acoustic Guitars -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="#" class="card-img-top" alt="Acoustic Guitars">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Acoustic Guitars</h5>
+                        <p class="card-text">Browse our collection of premium acoustic guitars.</p>
+                        <a href="#" class="btn btn-outline-primary">Shop Acoustic</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Electric Guitars -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="#" class="card-img-top" alt="Electric Guitars">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Electric Guitars</h5>
+                        <p class="card-text">Unleash your inner rockstar with our electric guitars.</p>
+                        <a href="#" class="btn btn-outline-primary">Shop Electric</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Accessories -->
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <img src="#" class="card-img-top" alt="Accessories">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Accessories</h5>
+                        <p class="card-text">Everything you need to enhance your music experience.</p>
+                        <a href="#" class="btn btn-outline-primary">Shop Accessories</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card">
-            <img src="#" class="card-img-top" alt="Electric Guitars">
-            <div class="card-body">
-                <h5 class="card-title">Electric Guitars</h5>
-                <p class="card-text">Unleash your inner rockstar with our electric guitars.</p>
-                <a href="#" class="btn btn-outline-primary">Shop Electric</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-4">
-        <div class="card">
-            <img src="#" class="card-img-top" alt="Accessories">
-            <div class="card-body">
-                <h5 class="card-title">Accessories</h5>
-                <p class="card-text">Everything you need to enhance your music experience.</p>
-                <a href="#" class="btn btn-outline-primary">Shop Accessories</a>
-            </div>
-        </div>
-    </div>
+    </section>
 </div>
 {% endblock %}
