--- a/templates/base.html
+++ b/templates/base.html
@@ -26,13 +26,20 @@
     <!-- Header -->
     <header class="bg-dark text-white">
         <nav class="navbar navbar-expand-lg navbar-dark container">
-            <a class="navbar-brand" href="#">
-                <img src="#" alt="#" height="40">
-                Strum & Strings
-            </a>
+            <!-- Brand Section -->
+            <div class="navbar-brand-container">
+                <a class="navbar-brand" href="#">
+                    <img src="#" alt="" height="40">
+                    Strum & Strings
+                </a>
+            </div>
+    
+            <!-- Toggler for Mobile -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+    
+            <!-- Navigation Links Section -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
@@ -47,7 +54,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             Cart
-                            <span class="badge bg-warning text-dark">{{ cart_item_count }}</span>
+                            <span class="badge bg-warning text-dark">#</span>
                         </a>
                     </li>
                 </ul>
@@ -94,7 +101,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Font Awesome (for icons) -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/17fadc6c88.js" crossorigin="anonymous"></script>
 
     <!-- Custom JS -->
     <script src="#"></script>
