added in images on 3 sale sections and edited css

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
             <!-- Acoustic Guitars -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="#" class="card-img-top" alt="Acoustic Guitars">
+                    <img src="/static/images/acoustic-guitar-home.jpg" class="card-img-top" alt="Acoustic Guitars">
                     <div class="card-body text-center">
                         <h5 class="card-title">Acoustic Guitars</h5>
                         <p class="card-text">Browse our collection of premium acoustic guitars.</p>
@@ -29,7 +29,7 @@
             <!-- Electric Guitars -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="#" class="card-img-top" alt="Electric Guitars">
+                    <img src="/static/images/electric-guitar-home.jpg" class="card-img-top" alt="Electric Guitars">
                     <div class="card-body text-center">
                         <h5 class="card-title">Electric Guitars</h5>
                         <p class="card-text">Unleash your inner rockstar with our electric guitars.</p>
@@ -41,7 +41,7 @@
             <!-- Accessories -->
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="#" class="card-img-top" alt="Accessories">
+                    <img src="/static/images/accessories-home.jpg" class="card-img-top" alt="Accessories">
                     <div class="card-body text-center">
                         <h5 class="card-title">Accessories</h5>
                         <p class="card-text">Everything you need to enhance your music experience.</p>
