--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
     {% endblock %}
 
     <!-- Footer -->
-    <footer class="bg-dark text-white py-4">
+    <footer class="bg-dark text-white py-4" id="footer-one">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
