--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,7 +4,7 @@ html, body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    /* overflow-x: hidden; */
+ 
 }
 
 main {
@@ -97,6 +97,8 @@ header .navbar-nav .nav-link {
     margin: 0;
     padding: 0;
     width: 100vw;
+    position: relative;
+    overflow: hidden;
 }
 
 .home-hero h1, .home-hero p, .home-hero a {
@@ -123,6 +125,10 @@ header .navbar-nav .nav-link {
 @media (max-width: 767.98px) {
     .option-container {
         display: none;
+    }
+
+    #footer-one {
+        padding-top: 60px !important;
     }
 
     footer .row {
@@ -187,6 +193,8 @@ header .navbar-nav .nav-link {
         margin: 0; 
         padding: 0;
         width: 100vw;
+        overflow: hidden;
+
     }
 
     .home-hero h1, .home-hero p, .home-hero a {
