--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 <body>
     <!-- Header -->
     <header class="bg-dark text-white fixed-top">
-        <nav class="navbar navbar-expand-lg navbar-dark container">
+        <nav class="navbar navbar-expand-lg navbar-dark container-fluid">
             <!-- Brand Section -->
             <div class="navbar-brand-container">
                 <a class="navbar-brand" href="{% url 'home' %}">Strum & Strings</a>
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                 <!-- Search Form in the Middle -->
                 <form class="d-flex mx-auto" role="search">
-                    <input class="form-control me-2" type="text" placeholder="Search" aria-label="Search">
+                    <input class="form-control me-2 w-100" type="text" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-light" type="submit" id="search-one">Search</button>
                 </form>
     
