added in products json file for some acoustic guitars. updated base tamplate as well as urls etc

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="#">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'categories_list' %}">Categories</a>
+                        <a class="nav-link" href="{% url 'categories:categories_list' %}">Categories</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Account</a>
