--- a/categories/templates/categories/categories_list.html
+++ b/categories/templates/categories/categories_list.html
@@ -7,8 +7,10 @@
 
 {% block title %}Categories – Strum & Strings{% endblock %}
 
+{% block main_class %}container mt-2{% endblock %}
+
 {% block content %}
-<main class="container mt-5">
+<div>
 
   <!-- Breadcrumb Navigation -->
   <nav aria-label="breadcrumb" id="breadcrumb-main">
@@ -25,37 +27,24 @@
   </section>
 
   <!-- Category Cards -->
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 mt-4">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
     {% for category in categories %}
-      <div class="col">
+      <div class="col {% if forloop.last %}mb-4{% endif %}">
         <div class="card h-100">
-          {% comment %}
-            Use one of the three static images based on the category name
-          {% endcomment %}
           {% if category.name == "Acoustic Guitars" %}
-            <img src="{% static 'images/acoustic-guitar-home.jpg' %}"
-                 class="card-img-top"
-                 alt="Acoustic Guitars">
+            <img src="{% static 'images/acoustic-guitar-home.jpg' %}" class="card-img-top" alt="Acoustic Guitars">
           {% elif category.name == "Electric Guitars" %}
-            <img src="{% static 'images/electric-guitar-new.jpg' %}"
-                 class="card-img-top"
-                 alt="Electric Guitars">
+            <img src="{% static 'images/electric-guitar-new.jpg' %}" class="card-img-top" alt="Electric Guitars">
           {% elif category.name == "Accessories" %}
-            <img src="{% static 'images/accessories-home.jpg' %}"
-                 class="card-img-top"
-                 alt="Accessories">
+            <img src="{% static 'images/accessories-home.jpg' %}" class="card-img-top" alt="Accessories">
           {% else %}
-            <!-- Fallback placeholder -->
-            <img src="{% static 'images/placeholder.jpg' %}"
-                 class="card-img-top"
-                 alt="{{ category.name }}">
+            <img src="{% static 'images/placeholder.jpg' %}" class="card-img-top" alt="{{ category.name }}">
           {% endif %}
 
           <div class="card-body text-center">
             <h5 class="card-title">{{ category.name }}</h5>
             <p class="card-text">{{ category.description }}</p>
-            <a href="{% url 'categories:category_detail' category.pk %}"
-               class="btn btn-outline-primary">
+            <a href="{% url 'categories:category_detail' category.pk %}" class="btn btn-outline-primary">
               Shop {{ category.name }}
             </a>
           </div>
@@ -68,5 +57,5 @@
     {% endfor %}
   </div>
 
-</main>
+</div>
 {% endblock %}
