--- a/templates/base.html
+++ b/templates/base.html
@@ -2,100 +2,149 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     {% block meta %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Strum & Strings is your one-stop shop for guitars, accessories, and more.">
-    <meta name="keywords" content="guitars, musical instruments, accessories, acoustic, electric, music gear">
-    <meta name="author" content="Strum & Strings">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Strum & Strings is your one-stop shop for guitars, accessories, and more."
+    />
+    <meta
+      name="keywords"
+      content="guitars, musical instruments, accessories, acoustic, electric, music gear"
+    />
+    <meta name="author" content="Strum & Strings" />
+    {% endblock %}
+
+    {% block canonical %}
+    <link rel="canonical" href="{{ request.build_absolute_uri }}">
     {% endblock %}
 
     <title>{% block title %}Strum & Strings{% endblock %}</title>
 
     {% block corecss %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    {% endblock %} {% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     {% endblock %}
-
-    {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    {% endblock %}
-</head>
-<body>
+  </head>
+  <body>
     <div class="wrapper d-flex flex-column min-vh-100">
-        <!-- Header -->
-        <header class="bg-dark text-white fixed-top">
-            <nav class="navbar navbar-expand-lg navbar-dark container-fluid">
-                <div class="navbar-brand-container">
-                    <a class="navbar-brand" href="{% url 'home' %}">Strum & Strings</a>
-                </div>
+      <!-- Header -->
+      <header class="bg-dark text-white fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark container-fluid">
+          <div class="navbar-brand-container">
+            <a class="navbar-brand" href="{% url 'home' %}">Strum & Strings</a>
+          </div>
 
-                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="margin-left: 25px;">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+          <button
+            class="navbar-toggler d-lg-none"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+            style="margin-left: 25px"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-                <div class="collapse navbar-collapse justify-content-between burger-one" id="navbarNav">
-                    <form class="d-flex mx-auto" role="search">
-                        <input class="form-control me-2 w-100" type="text" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-light" type="submit">Search</button>
-                    </form>
+          <div
+            class="collapse navbar-collapse justify-content-between burger-one"
+            id="navbarNav"
+          >
+            <form class="d-flex mx-auto" role="search">
+              <input
+                class="form-control me-2 w-100"
+                type="text"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-light" type="submit">
+                Search
+              </button>
+            </form>
 
-                    <ul class="navbar-nav ms-auto list-inline list-unstyled" id="nav-links-one">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Shop</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'categories:categories_list' %}">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Account</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                Cart <span class="badge bg-warning text-dark">{{ cart_item_count }}</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
+            <ul
+              class="navbar-nav ms-auto list-inline list-unstyled"
+              id="nav-links-one"
+            >
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="{% url 'categories:categories_list' %}"
+                  >Categories</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Account</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">
+                  Cart
+                  <span class="badge bg-warning text-dark"
+                    >{{ cart_item_count }}</span
+                  >
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
 
-        <main class="{% block main_class %}flex-grow-1 mt-5 pt-5{% endblock %}">
-            {% block content %}{% endblock %}
-        </main>
+      <main class="{% block main_class %}flex-grow-1 mt-5 pt-5{% endblock %}">
+        {% block content %}{% endblock %}
+      </main>
 
-        <footer class="bg-dark text-white py-4" id="footer-one">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h5>About Strum & Strings</h5>
-                        <p>Your trusted store for guitars and accessories.</p>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <h5>Quick Links</h5>
-                        <ul class="list-unstyled">
-                            <li><a href="#" class="text-white">Home</a></li>
-                            <li><a href="#" class="text-white">Shop</a></li>
-                            <li><a href="#" class="text-white">Account</a></li>
-                            <li><a href="#" class="text-white">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h5>Follow Us</h5>
-                        <a href="#" class="text-white me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
-                    </div>
-                </div>
-                <div class="text-center mt-4">
-                    &copy; 2025 Strum & Strings. All Rights Reserved.
-                </div>
+      <footer class="bg-dark text-white py-4" id="footer-one">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <h5>About Strum & Strings</h5>
+              <p>Your trusted store for guitars and accessories.</p>
             </div>
-        </footer>
+            <div class="col-md-3 mb-3">
+              <h5>Quick Links</h5>
+              <ul class="list-unstyled">
+                <li><a href="#" class="text-white">Home</a></li>
+                <li><a href="#" class="text-white">Shop</a></li>
+                <li><a href="#" class="text-white">Account</a></li>
+                <li><a href="#" class="text-white">Contact</a></li>
+              </ul>
+            </div>
+            <div class="col-md-3">
+              <h5>Follow Us</h5>
+              <a href="#" class="text-white me-3"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="#" class="text-white me-3"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="#" class="text-white me-3"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </div>
+          </div>
+          <div class="text-center mt-4">
+            &copy; 2025 Strum & Strings. All Rights Reserved.
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/17fadc6c88.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/17fadc6c88.js"
+      crossorigin="anonymous"
+    ></script>
     {% block postloadjs %}{% endblock %}
-</body>
+  </body>
 </html>
