--- a/categories/templates/categories/categories_list.html
+++ b/categories/templates/categories/categories_list.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
+{{ block.super }}
 <link rel="stylesheet" href="{% static 'categories/css/categories.css' %}">
 {% endblock %}
 
