--- a/categories/templates/categories/category_detail.html
+++ b/categories/templates/categories/category_detail.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
+{{ block.super }}
 <link rel="stylesheet" href="{% static 'categories/css/categories.css' %}">
 <!-- Bootstrap Icons -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -61,7 +62,7 @@
               {% endif %}
               <p class="h5">£{{ product.price }}</p>
               <a href="{% url 'products:product_detail' product.pk %}"
-                 class="btn btn-primary">
+                 class="btn btn-outline-primary">
                 View Details
               </a>
             </div>
