--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     {% endblock %}
   </head>
   <body>
-    <div class="wrapper d-flex flex-column min-vh-100">
+    <div class="wrapper d-flex flex-column">
       <!-- Header -->
       <header class="bg-dark text-white fixed-top">
         <nav class="navbar navbar-expand-lg navbar-dark container-fluid">
@@ -100,7 +100,7 @@
         </nav>
       </header>
 
-      <main class="{% block main_class %}flex-grow-1 mt-5 pt-5{% endblock %}">
+      <main class="{% block main_class %}flex-grow-1{% endblock %}">
         {% block content %}{% endblock %}
       </main>
 
